fix : extra whitespace in small devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+}
+
 :root {
   --background: #111;
   --foreground: #d1d5db;
@@ -10,6 +17,12 @@
 body {
   color: var(--foreground);
   background: var(--background);
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .shiki,
